--- a/static/estilo.css
+++ b/static/estilo.css
@@ -2,7 +2,10 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgba(13, 161, 154, 0.931);
+    background: #085078;  
+    background: -webkit-linear-gradient(to right, #85D8CE, #085078);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #85D8CE, #085078); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     align-items: center;
 }
 h1{
@@ -40,7 +43,9 @@ h2{
 }
 
 .personagens{
-    background-color: rgba(13, 161, 154, 0.931);
+    background: #085078;  
+    background: -webkit-linear-gradient(to right, #85D8CE, #085078);
+    background: linear-gradient(to right, #85D8CE, #085078);
     width: 100%;
     border-radius: 10px;
     display: flex;
@@ -59,9 +64,10 @@ h2{
 }
 
 .armas{
-    
+    background: #085078;  
+    background: -webkit-linear-gradient(to right, #85D8CE, #085078);
+    background: linear-gradient(to right, #85D8CE, #085078);
     width: 100%;
-    background-color: rgba(13, 161, 154, 0.931);
     display: flex;
     border-radius: 10px;
     flex-direction: row;
